overFlow corrected

--- a/strongman.css
+++ b/strongman.css
@@ -133,7 +133,7 @@ color: rgba(255, 255, 255, 0.5);
     margin: 0% 2%;
    }
    body{
-    overflow: hidden;
+    overflow-x: hidden;
    }
 
 }
